# src/api/@types/index.ts
@@ -2,16 +2,19 @@
 /** メモ識別子 */
 export type MemoId = string
 
-/** メモオブジェクト */
-export type Memo = {
-  /** ID */
-  id?: string
-  /** 登録日時(UTC) */
-  createdAt?: string
-  /** 更新日時(UTC) */
-  updatedAt?: string
-  /** コンテンツ */
+export type MemoCreateProps = {
+  /** 投稿内容 */
   content: string
+}
+
+/** メモオブジェクト */
+export type Memo = MemoCreateProps & {
+  /** ID */
+  id: string
+  /** 登録日時(UTC) */
+  createdAt: string
+  /** 登録日時(UTC) */
+  updatedAt: string
   /** ブックマークフラグ */
-  isBookmarked?: boolean
+  isBookmarked: boolean
 }
